# deep4downscaling

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py  srunN.slurm
d4d.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
deep4downscaling/: README.md  __init__.py  c4r2d4d.py  datasets.py  deep_loss.py  deep_models.py  deep_train.py  deep_utils.py  metrics.py  metrics_ccs.py  trans.py  viz.py
deep4downscaling.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
deep4downscaling/console/: d4dcreate.py  d4dinspect.py  d4dpredict.py  d4dtrainer.py  main_create.py  main_inspect.py  main_predict.py  main_train.py
deep4downscaling/deep/: README.md  loss.py  models.py  pred.py  tracker.py  train.py  utils.py  xai.py
deep4downscaling/deep/loss/: README.md  __init__.py  asym.py  crps.py  nll.py  perceptual.py  standard.py
deep4downscaling/deep/models/: README.md  __init__.py  blocks.py
deep4downscaling/deep/models/deepesd/: __init__.py  blocks.py  deepesd.py  discriminator.py  multihead.py  noisy.py
deep4downscaling/deep/models/deepesdv2/: __init__.py  blocks.py  deepesdv2.py  noisy.py
deep4downscaling/deep/models/unets/: __init__.py  unet.py
deep4downscaling/deep/models/vit/: __init__.py  blocks.py  noisy.py  vit.py
notebooks/: README.md  cordexbench_downscaling_deepesd.ipynb  downscaling_cgan.ipynb  downscaling_deepesd.ipynb  downscaling_stochastic_deepesd.ipynb  downscaling_vit.ipynb  explainability_deepesd.ipynb  train_deepesd.ipynb
requirements/: deep4downscaling-cpu.yml  deep4downscaling-gpu.yml
